# genAI

./: .gitignore  GenAppBuilder.ipynb  GenretAIl-ok.ipynb  GenretAIl.ipynb  bqml_cloud_ai.ipynb  model_garden_pytorch_stable_diffusion.ipynb
.ipynb_checkpoints/: GenretAIl-ok-checkpoint.ipynb  model_garden_pytorch_stable_diffusion-checkpoint.ipynb
AI-apis-examples/: Natural_language_apis.ipynb
Images/: Imagen.ipynb  Imagen_Visual_captioning.ipynb
Language/: hubside.ipynb  writing.ipynb
PropertyTech/: PropertyDescriptionGenerator.ipynb
PropertyTech/Demo_1/: echantillon.json
bigqueryML/: Explain_Cluster_Analysis_with_BQML_and_Vertex_PaLM_API.ipynb  bqml_cloud_ai.ipynb
chat-streamlit/: app.py  deploy.sh  requirements.txt
chatbot/.ipynb_checkpoints/: deploy-checkpoint.sh
chatbot/backend/: pyproject.toml  run.sh
chatbot/backend-dialogflow/: pyproject.toml
chatbot/backend-dialogflow/app/: server.py
chatbot/backend-multiple-strategy/: README.md  pyproject.toml
chatbot/backend-multiple-strategy/app/: server.py
chatbot/backend/.ipynb_checkpoints/: pyproject-checkpoint.toml
chatbot/backend/app/: config.py  server.py
chatbot/backend/app/.ipynb_checkpoints/: server-checkpoint.py
chatbot/backend/terraform/.ipynb_checkpoints/: main-checkpoint.tf
chatbot/travel_api/: main.py  requirements.txt
cloud-run/demo-streamlit-cloudrun/: Dockerfile  app-search.py  app-video.py  app.py  app_footer.py  config.py  data.py  demo-immo.py  deploy-video.sh  deploy.sh  gcs.py  gemini.py  langchainAgent.py  requirements.txt  stt.py  test.ipynb  test2.ipynb  text2img.py  text2speech.py  utils.py  videoedit.py  youtubeAPI.py
cloud-run/education-streamlit/: app.py  config.py  gcs.py  requirements.txt  stt.py
demos/: news_sentiment.ipynb
infra/cdn-messages/: contact.html  index.html  main.tf  privacy.html  terraform.tfstate  terraform.tfstate.backup
langchain/: GenAppBuilder-LangchainTools.ipynb  langchain-google-calendar.ipynb  langchain-google-tools.ipynb
langflow/: Basic Chat with Prompt and History.json  Basic GoogleVertexAI Chat with Prompt and History (1).json  Basic GoogleVertexAI Chat with Prompt and History.json  Time Travel Guide.json  Vector Store - matching-engine (1).json  Vector Store - matching-engine (2).json  Vector Store - matching-engine (3).json  Vector Store - matching-engine (4).json  Vector Store - matching-engine.json  Vector Store FAISS.json  langflow_demo.ipynb
retail/: product_description_generator_image.ipynb
(+7 files in other folders)
