[tool.poetry]
name = "chat-bot-dialogflow-langchain"
version = "0.1.2"
description = "Simple chat bot to demonstrate Google cloud capabilities"
authors = ["Julien MIQUEL <julienmiquel@google.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
google-cloud-dialogflow-cx=="1.21.0"
Flask=="2.2.5"
python-dateutil=="2.8.2"
functions-framework=="3.3.0"
Werkzeug=="3.0.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
